# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
hooks/: check_argocd_app.py
